--- a/CampusLearnNTG/CampusLearnNTG/Pages/Shared/Nav.cshtml
+++ b/CampusLearnNTG/CampusLearnNTG/Pages/Shared/Nav.cshtml
@@ -31,6 +31,7 @@
                         <li><a href="/TutorDashboard">Tutor Dashboard</a></li>
                         <li><a href="/AdminDashboard">Admin Dashboard</a></li>
                         <li><a href="/Forum">Public Forum</a></li>
+                        <li><a href="/Messages">Private Messaging</a></li>
                         <li><a href="/Profile">Profile</a></li>
                         <li><a href="/Settings">Settings</a></li>
                         <li><a href="/Courses">Courses</a></li>
