--- a/CampusLearnNTG/CampusLearnNTG/Pages/TutorDashboard.cshtml
+++ b/CampusLearnNTG/CampusLearnNTG/Pages/TutorDashboard.cshtml
@@ -27,6 +27,7 @@ Verify with Kian Controller Details.
                 <li style="margin-bottom: 1.2rem;"><span class="bi bi-person"></span> My Profile</li>
                 <li style="margin-bottom: 1.2rem;"><span class="bi bi-calendar"></span> Session Management</li>
                 <li style="margin-bottom: 1.2rem;"><span class="bi bi-upload"></span> Resource Upload</li>
+                <li><a asp-page="/TutorTopics">Manage Topics</a></li>
                 <li style="margin-bottom: 1.2rem;"><span class="bi bi-chat-dots"></span> Messaging</li>
                 <li style="margin-bottom: 1.2rem;"><span class="bi bi-people"></span> Public Forum</li>
             </ul>
